--- a/diario-de-bordo/conf/base/catalog.yml
+++ b/diario-de-bordo/conf/base/catalog.yml
@@ -1,8 +1,5 @@
-# Here you can define all your data sets by using simple YAML syntax.
-#
 # Documentation for this file format can be found in "The Data Catalog"
 # Link: https://docs.kedro.org/en/stable/data/data_catalog.html
-
 
 input_info_transportes:
   filepath: data/raw/info_transportes.csv
@@ -25,3 +22,4 @@ output_info_corridas_do_dia:
   file_format: delta
   save_args:
     mode: overwrite
+    partitionBy: ["DT_REFE"]
