Adicionado o modo dinamico para overwrite para sobrescrever apenas as partições que existem e as demais ficarem intactas.

--- a/diario-de-bordo/conf/base/catalog.yml
+++ b/diario-de-bordo/conf/base/catalog.yml
@@ -24,4 +24,5 @@ output_info_corridas_do_dia:
   file_format: delta
   save_args:
     mode: overwrite
+    partitionOverwriteMode: dynamic
     partitionBy: ["DT_REFE"]
