ajusts para sparksession e adição node para ler a tabela gerada

--- a/diario-de-bordo/conf/base/spark.yml
+++ b/diario-de-bordo/conf/base/spark.yml
@@ -6,3 +6,8 @@ spark.sql.execution.arrow.pyspark.enabled: true
 
 # https://docs.kedro.org/en/stable/integrations/pyspark_integration.html#tips-for-maximising-concurrency-using-threadrunner
 spark.scheduler.mode: FAIR
+
+# Adicionado novas configurações para o Delta Lake
+spark.sql.extensions: io.delta.sql.DeltaSparkSessionExtension
+spark.sql.catalog.spark_catalog: org.apache.spark.sql.delta.catalog.DeltaCatalog
+spark.jars.packages: io.delta:delta-core_2.12:2.4.0
