--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,6 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Pasta gerada pelo Kedro, pode armezenar arquivos temporários entre outros arquivos relacionados a execução do kedro.
+diario-de-bordo/.viz/
